--- a/index.html
+++ b/index.html
@@ -3,11 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Amazon.com. Spend less. Smile more.</title>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!---------- header section ---------->
+    <header>
+        <nav class="nav-bar">
+            <div class="nav-logo border">
+                <div class="logo"></div>
+            </div>
+
+            <div class="nav-loc border">
+                <p class="add-text">Deliver to</p>
+                <div class="loc-icon-country">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <span class="add-country">India</span>
+                </div>
+            </div>
+
+            <div class="nav-search border-yellow">
+                <select class="select-search no-border">
+                    <option class="bg-white">All</option>
+                    <option class="bg-white">Arts & Crafts</option>
+                    <option class="bg-white">Automotive</option>
+                    <option class="bg-white">Baby</option>
+                    <option class="bg-white">Beauty & Personal Care</option>
+                    <option class="bg-white">Books</option>
+                    <option class="bg-white">Boys' Fashion</option>
+                    <option class="bg-white">Computers</option>
+                    <option class="bg-white">Deals</option>
+                    <option class="bg-white">Digital Music</option>
+                    <option class="bg-white">Electronics</option>
+                    <option class="bg-white">Girls' Fashion</option>
+                    <option class="bg-white">Home & Kitchen</option>
+                    <option class="bg-white">Industrial & Scientific</option>
+                    <option class="bg-white">Kindle Store</option>
+                    <option class="bg-white">Luggage</option>
+                </select>
+                <input placeholder="Search Amazon" class="input-search">
+                <button class="search-btn no-border">
+                    <i class="fa-solid fa-magnifying-glass search-img"></i>
+                </button>
+            </div>
+
+            <div class="nav-sign-in border">
+                <p class="txt-sign-in">Hello, sign in</p>
+                <div class="account-list">
+                    <p class="txt-accounts">Account & Lists</p>
+                    <i class="fa-solid fa-sort-down down-arrow"></i>
+                </div>
+            </div>
+
+            <div class="nav-return border">
+                <p class="txt-return">Returns</p>
+                <p class="txt-orders">& Orders</p>
+            </div>
+
+            <div class="nav-cart border">
+                <i class="fa-solid fa-cart-shopping cart-icon"></i>
+                <p class="txt-cart">Cart</p>
+            </div>
+        </nav>
+    </header>
+
+    <!---------- footer section ---------->
+    <footer class="footer">
+        
+    </footer>
 </body>
 </html>
