add navigation panel

--- a/index.html
+++ b/index.html
@@ -67,7 +67,25 @@
                 <p class="txt-cart">Cart</p>
             </div>
         </nav>
+        <div class="nav-bottom-panel">
+            <div class="left-nav-panel">
+                <a href="#" class="items border"><i class="fa-solid fa-bars fa-lg panel-menu"></i><span>All</span></a>
+            </div>
+            <div class="right-nav-panel">
+                <a href="#" class="items border">Today's Deals</a>
+                <a href="#" class="items border">Customer Service</a>
+                <a href="#" class="items border">Registry</a>
+                <a href="#" class="items border">Gift Cards</a>
+                <a href="#" class="items border">Sell</a>
+            </div>
+        </div>
     </header>
+
+    <!---------- main section ---------->
+    <div class="main-section">
+        <div class="web-info">You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery.<a href="https://www.amazon.in/">Click here to go to amazon.in</a></div>
+    </div>
+
 
     <!---------- footer section ---------->
     <footer class="footer">
