--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="nav-loc border">
                 <p class="add-text">Deliver to</p>
                 <div class="loc-icon-country">
-                    <i class="fa-solid fa-location-dot"></i>
+                    <i class="fa-solid fa-location-dot loc-icon"></i>
                     <span class="add-country">India</span>
                 </div>
             </div>
@@ -84,7 +84,16 @@
     <!---------- main section ---------->
     <div class="main-section">
         <div class="web-info">You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery.<a href="https://www.amazon.in/">Click here to go to amazon.in</a></div>
+
+        <div class="box-row1">
+            <div class="box1 box"></div>
+            <div class="box2 box"></div>
+            <div class="box3 box"></div>
+            <div class="box4 box"></div>
+        </div>
     </div>
+
+    <div class="container2"></div>
 
 
     <!---------- footer section ---------->
