set images in box

--- a/index.html
+++ b/index.html
@@ -86,7 +86,20 @@
         <div class="web-info">You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery.<a href="https://www.amazon.in/">Click here to go to amazon.in</a></div>
 
         <div class="box-row1">
-            <div class="box1 box"></div>
+            <div class="box1 box">
+                <p class="box-label">Gaming accessories</p>
+                <div class="product1">
+                    <div class="img img-product1"></div>
+                    <p class="product-name">Headsets</p>
+                </div>
+                <div class="product2">
+                    <div class="img img-product2"></div>
+                    <p class="product-name">Computer mice</p>
+                </div>
+                <div class="see-more-link">
+                    <a href="#">See more</a>
+                </div>
+            </div>
             <div class="box2 box"></div>
             <div class="box3 box"></div>
             <div class="box4 box"></div>
