add products in boxes

--- a/index.html
+++ b/index.html
@@ -96,13 +96,40 @@
                     <div class="img img-product2"></div>
                     <p class="product-name">Computer mice</p>
                 </div>
-                <div class="see-more-link">
+                <div class="color-with-underline-link">
                     <a href="#">See more</a>
                 </div>
             </div>
-            <div class="box2 box"></div>
-            <div class="box3 box"></div>
-            <div class="box4 box"></div>
+            <div class="box2 box">
+                <p class="box-label">Refresh your space</p>
+                <div class="product">
+                    <div class="img img-product5"></div>
+                    <p class="product-name">Headsets</p>
+                </div>
+                <div class="color-with-underline-link">
+                    <a href="#">See more</a>
+                </div>
+            </div>
+            <div class="box3 box">
+                <p class="box-label">Deals in PCs</p>
+                <div class="product">
+                    <div class="img img-product6"></div>
+                    <!-- <p class="product-name">Headsets</p> -->
+                </div>
+                <div class="color-with-nounderline-link">
+                    <a href="#">Shop now</a>
+                </div>
+            </div>
+            <div class="box4 box">
+                <p class="box-label">Shop activity trackers and smartwatches</p>
+                <div class="product">
+                    <div class="img img-product7"></div>
+                    <!-- <p class="product-name">Headsets</p> -->
+                </div>
+                <div class="color-with-nounderline-link">
+                    <a href="#">Shop now</a>
+                </div>
+            </div>
         </div>
     </div>
 
