--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
     <!---------- main section ---------->
     <div class="main-section">
         <div class="web-info">You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery.<a href="https://www.amazon.in/">Click here to go to amazon.in</a></div>
-
         <div class="box-row1">
             <div class="box1 box">
                 <p class="box-label">Gaming accessories</p>
@@ -135,8 +134,13 @@
         </div>
     </div>
 
-    <div class="container2"></div>
+    <div class="container1"></div>
 
+    <div class="container2">
+        <div class="horizontal-scroll-view">
+            
+        </div>
+    </div>
 
     <!---------- footer section ---------->
     <footer class="footer">
