--- a/index.html
+++ b/index.html
@@ -137,8 +137,44 @@
     <div class="container1"></div>
 
     <div class="container2">
-        <div class="horizontal-scroll-view">
-            
+        <div class="horizontal-scroll-view-container">
+            <div class="book-txt">Top Sellers in Books for you</div>
+            <div class="horizontal-scroll-view">
+                <table>
+                    <tr>
+                        <td>
+                            <img src="./images/book1.jpg" alt="img" class="book-img">
+                        </td>
+                        <td>
+                            <img src="./images/book2.jpg" alt="img" class="book-img">
+                        </td>
+                        <td>
+                            <img src="./images/book3.jpg" alt="img" class="book-img">
+                        </td>
+                        <td>
+                            <img src="./images/book4.jpg" alt="img" class="book-img">
+                        </td>
+                        <td>
+                            <img src="./images/book5.jpg" alt="img" class="book-img">
+                        </td>
+                        <td>
+                            <img src="./images/book6.jpg" alt="img" class="book-img">
+                        </td>
+                        <td>
+                            <img src="./images/book7.jpg" alt="img" class="book-img">
+                        </td>
+                        <td>
+                            <img src="./images/book8.jpg" alt="img" class="book-img">
+                        </td>
+                        <td>
+                            <img src="./images/book9.jpg" alt="img" class="book-img">
+                        </td>
+                        <td>
+                            <img src="./images/book10.jpg" alt="img" class="book-img">
+                        </td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </div>
 
