--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <p class="box-label">Refresh your space</p>
                 <div class="product">
                     <div class="img img-product5"></div>
-                    <p class="product-name">Headsets</p>
+                    <p class="product-name">Home</p>
                 </div>
                 <div class="color-with-underline-link">
                     <a href="#">See more</a>
@@ -140,7 +140,7 @@
         <div class="horizontal-scroll-view-container">
             <div class="book-txt">Top Sellers in Books for you</div>
             <div class="horizontal-scroll-view">
-                <table>
+                <table class="book-table">
                     <tr>
                         <td>
                             <img src="./images/book1.jpg" alt="img" class="book-img">
@@ -180,7 +180,183 @@
 
     <!---------- footer section ---------->
     <footer class="footer">
-        
+        <div class="footer1">Back to top</div>
+        <div class="footer2">
+            <div class="footer-links-container footerAccessibility">
+                <div class="footer-head">Get to Know Us</div>
+                <ul>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">About Amazon</a></li>
+                    <li><a href="#">Investor Relations</a></li>
+                    <li><a href="#">Amazon Devices</a></li>
+                    <li><a href="#">Amazon Science</a></li>
+                </ul>
+            </div>
+            <div class="footer-space-col footerAccessibility"></div>
+            <div class="footer-links-container footerAccessibility">
+                <div class="footer-head">Make Money with Us</div>
+                <ul>
+                    <li><a href="#">Sell products on Amazon</a></li>
+                    <li><a href="#">Sell on Amazon Business</a></li>
+                    <li><a href="#">Sell apps on Amazon</a></li>
+                    <li><a href="#">Become an Affiliate</a></li>
+                    <li><a href="#">Advertise Your Products</a></li>
+                    <li><a href="#">Self-Publish with Us</a></li>
+                    <li><a href="#">Host an Amazon Hub</a></li>
+                    <li>› <a href="#">See More Make Money with Us</a></li>
+                </ul>
+            </div>
+            <div class="footer-space-col footerAccessibility"></div>
+            <div class="footer-links-container footerAccessibility">
+                <div class="footer-head">Amazon Payment Products</div>
+                <ul>
+                    <li><a href="#">Amazon Business Card</a></li>
+                    <li><a href="#">Shop with Points</a></li>
+                    <li><a href="#">Reload Your Balance</a></li>
+                    <li><a href="#">Amazon Currency Converter</a></li>
+                </ul>
+            </div>
+            <div class="footer-space-col footerAccessibility"></div>
+            <div class="footer-links-container footerAccessibility">
+                <div class="footer-head">Let Us Help You</div>
+                <ul>
+                    <li><a href="#">Amazon and COVID-19</a></li>
+                    <li><a href="#">Your Account</a></li>
+                    <li><a href="#">Your Orders</a></li>
+                    <li><a href="#">Shipping Rates & Policies</a></li>
+                    <li><a href="#">Returns & Replacements</a></li>
+                    <li><a href="#">Manage Your Content and Devices</a></li>
+                    <li><a href="#">Amazon Assistant</a></li>
+                    <li><a href="#">Help</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer3">
+            <table class="footer-link-table">
+                <tr>
+                    <td class="data-content">
+                        <a href="#">Amazon Music<br><span>Stream millions of songs</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">Amazon Ads<br><span>Reach customers wherever they spend their time</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">6pm<br><span>Score deals on fashion brands</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">AbeBooks<br><span>Books, art & collectibles</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">ACX<br><span>Audiobook Publishing Made Easy</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">Sell on Amazon<br><span>Start a Selling Account</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">Amazon Business<br><span>Everything For Your Business</span></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="row-space"></td>
+                </tr>
+                <tr>
+                    <td class="data-content">
+                        <a href="#">AmazonGlobal<br><span>Ship Orders Internationally</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">Home Services<br><span>Experienced Pros Happiness Guarantee</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">Amazon Web Services<br><span>Scalable Cloud Computing Services</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">Audible<br><span>Listen to Books & Original Audio Performances</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">Box Office Mojo<br><span>Find Movie Box Office Data</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">Goodreads<br><span>Book reviews & recommendations</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">IMDb<br><span>Movies, TV & Celebrities</span></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="row-space"></td>
+                </tr>
+                <tr>
+                    <td class="data-content">
+                        <a href="#">IMDbPro<br><span>Get Info Entertainment Professionals Need</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">Kindle Direct Publishing<br><span>Indie Digital & Print Publishing Made Easy</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">Prime Video Direct<br><span>Video Distribution Made Easy</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">Shopbop<br><span>Designer Fashion Brands</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">Woot!<br><span>Deals and Shenanigans</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">Zappos<br><span>Shoes & Clothing</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">Ring<br><span>Smart Home Security Systems</span></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="row-space"></td>
+                </tr>
+                <tr>
+                    <td class="data-content"></td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">eero WiFi<br><span>Stream 4K Video in Every Room</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">Blink<br><span>Smart Security for Every Home</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">Neighbors App<br><span>Real-Time Crime & Safety Alerts</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">Amazon Subscription Boxes<br><span>Top subscription boxes – right to your door</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content">
+                        <a href="#">PillPack<br><span>Pharmacy Simplified</span></a>
+                    </td>
+                    <td class="space-cell"></td>
+                    <td class="data-content"></td>
+                </tr>
+            </table>
+        </div>
     </footer>
 </body>
 </html>
