--- a/index.html
+++ b/index.html
@@ -357,6 +357,20 @@
                 </tr>
             </table>
         </div>
+
+        <div class="footer4">
+            <ul>
+                <li><a href="#">Conditions of Use</a></li>
+                <li><a href="#">Privacy Notice</a></li>
+                <li><a href="#">Your Ads Privacy Choices</a></li>
+                <li>
+                    <img src="images/privacy.png" alt="img" class="privacy-img">
+                </li>
+            </ul>
+            <span>
+                © 1996-2024, Amazon.com, Inc. or its affiliates
+            </span>
+        </div>
     </footer>
 </body>
 </html>
